--- a/config/database.yml
+++ b/config/database.yml
@@ -12,6 +12,7 @@ default: &default
 
 development:
   <<: *default
+  host: localhost
   database: time_tracker_development
   username: baldor
   password: baldor123
@@ -21,6 +22,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
+  host: localhost
   database: time_tracker_test
   username: baldor
   password: baldor123
